fixed method name in template

--- a/template/index.html
+++ b/template/index.html
@@ -8,7 +8,7 @@
     <script src="/lib/encoding.js"></script>
     <script src="/lib/tar.js"></script>
     <script src="/lib/coffee-boot.js"></script>
-    <script>CoffeeBoot.run('manifest.json', 'scripts/main');</script>
+    <script>CoffeeBoot.boot('manifest.json', 'scripts/main');</script>
 </head>
 <body>
 </body>
